<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardView"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    cardView:cardCornerRadius="@dimen/cornerradios_cardview">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardView"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transicionName_picture"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_username_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firsword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firsword_textsize_card" />

                <TextView
                    android:id="@+id/timecard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginlef_card"
                    android:text="@string/timecard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firsword_textsize_card" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_mergintop_card"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/likecheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/timecard_marginlef_card"
                    android:text="@string/likenumbercard_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firsword_textsize_card" />


            </LinearLayout>


        </LinearLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>