<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.platzi.platzigram.view.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="goPlatzigram"
                android:background="@drawable/platzigram" />

        </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_Login_margin">


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnlogin_withEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login_withemail"
                    android:theme="@style/RaisedButtonDarck" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/donHaveAcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donHaveAcount"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/textSizedonHaveAcount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/textSizedonHaveAcount"
                        android:textStyle="bold"
                        android:layout_toRightOf="@+id/donHaveAcount"
                        android:onClick="goCreateAccount"
                        />


                </RelativeLayout>

            </LinearLayout>


    </LinearLayout>

</RelativeLayout>
